--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.10"
+    "astro": "^4.15.10",
+    "astro-breadcrumbs": "^3.2.0"
   }
 }
